--- a/composer.json
+++ b/composer.json
@@ -41,8 +41,8 @@
         "symfony/browser-kit": "4.1.8",
         "symfony/dependency-injection": "4.1.8",
         "symfony/dom-crawler": "4.1.8",
-        "symfony/routing": "4.1.8",
-        "symplify/package-builder": "^8.3.17"
+        "symfony/routing": "4.1.8"
+
     },
     "autoload": {
         "psr-4": {
